djproject/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: djproject-sachin
spec:
  selector:
    matchLabels:
      app: jobapp
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: jobapp
    spec:
      containers:
      - name: jobapp
        image: sachinkumar26/djproject:latest
        ports:
        - containerPort: 8000
