djproject/kubernetes/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-jobapp-deployment
  labels:
    app: django-jobapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-jobapp
  template:
    metadata:
      labels:
        app: django-jobapp
    spec:
      containers:
        - name: django-jobapp
          image: sachinjobapp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
