djproject/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobapp-service
  labels:
    app: jobapp
spec:
  type: ClusterIP
  selector:
    app: jobapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: jobapp-nodeport
  labels:
    app: jobapp
    tier: nodeport
spec:
  type: NodePort
  selector:
    app: jobapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30007
